[package]
name = "auth_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "=1.24.1", features = ["macros", "rt-multi-thread"]}
warp = "=0.3.3"
mobc = "=0.7.3"
mobc-postgres = { version = "=0.7.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = {version = "=1.0.152", features = ["derive"]}
serde_json = "=1.0.91"
thiserror = "=1.0.38"